# PaddleOCR_onnxruntime

./: CMakeLists.txt  README.md
source/: main.cpp
source/Communicate/: CMakeLists.txt  server.cpp  server.h
source/Loader/: CMakeLists.txt  loader.cpp  loader.h
source/ModelOP/: CMakeLists.txt  clsnetop.cpp  clsnetop.h  dbnetop.cpp  dbnetop.h  recnetop.cpp  recnetop.h
